cluster/apps/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-postgres
spec:
  selector:
    app: paperless-postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-redis
spec:
  selector:
    app: paperless-redis
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
spec:
  selector:
    app: paperless-ngx
  ports:
    - port: 8000
      targetPort: 8000
